--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(https://ibb.co/FV4Lp5W);
+    background-image: url(https://i.ibb.co/hfFJ0BM/BG1.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -402,7 +402,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width:600px){
     #header{
-        background-image: url(https://ibb.co/PrXBGX1);
+        background-image: url(https://i.ibb.co/Zf4yz4c/BG2.jpg);
     }
     .header-text{
         margin-top: 100%;
